linuxmuster-linbo (2.3.66-0) lmn7; urgency=low

  * Fix linbo_wrapper, get_images(): improved getting image names from start.conf.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 4 Aug 2020 19:04:00 +0200

linuxmuster-linbo (2.3.65-0) lmn7; urgency=low

  * Fix #136: Linbo fails when label exists (mk_parted zeroes the mbr before creating the partition table).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 21 Jul 2020 14:24:23 +0200

linuxmuster-linbo (2.3.64-0) lmn7; urgency=low

  * linbofs: rsync.exclude additions.
  * Fix #86: Added support for multiple individual hosts or IPs.
  * Fix #116: .postsync vanishes after sync.
  * Fix #48: udhcpc: dns labels can actually start with a number.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 21 Jul 2020 14:24:23 +0200

linuxmuster-linbo (2.3.63-0) lmn7; urgency=low

  * fix #132: tell hwclock to assume rtc is in utc.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 11 Jun 2020 17:01:19 +0200

linuxmuster-linbo (2.3.62-0) lmn7; urgency=low

  * fix #123: create_efiboot() fails with NVMe devices.
  * lmn7: mkgrubhostimg.py fix, ip changed to hostname in dhcp's devices.conf.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 06 Jun 2020 12:59:33 +0200

linuxmuster-linbo (2.3.61-0) lmn7; urgency=low

  * lmn7:
    - fix #129: create_cloop und upload_cloop won't work anymore.
    - removed fix #131 "wake-on-lan improvement" (hosts don't wake up anymore with this fix).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 28 May 2020 15:34:30 +0200

linuxmuster-linbo (2.3.60-0) babo62; urgency=low

  * lmn7:
    - merged #131: wake-on-lan improvement & update-linbofs timezone fix.
    - reworked helperfunctions, get_bcaddress.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 27 May 2020 20:55:43 +0200

linuxmuster-linbo (2.3.59-0) babo62; urgency=low

  * lmn7: further modifications and fixes for dynamicip hosts support (#126).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 19 Apr 2020 13:03:55 +0200
